[gd_scene load_steps=4 format=3 uid="uid://lfp017c611je"]

[ext_resource type="Script" path="res://scenes/ui/hotbar/hotbar_slot.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="2"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.1, 0.1, 0.1, 0.501961)
corner_radius_top_left = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="1"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.1, 0.1, 0.1, 0.501961)
corner_radius_top_right = 2
corner_radius_bottom_right = 2

[node name="Hotbar_slot" type="HBoxContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 0
mouse_filter = 2
theme_override_constants/separation = 2
script = ExtResource("1")

[node name="SlotNumber" type="PanelContainer" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("2")

[node name="HBoxContainer" type="HBoxContainer" parent="SlotNumber"]
layout_mode = 2
mouse_filter = 2

[node name="SlotNumber" type="Label" parent="SlotNumber/HBoxContainer"]
layout_mode = 2
text = "1"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="UseIndicators" type="PanelContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("2")

[node name="HBoxContainer" type="HBoxContainer" parent="UseIndicators"]
layout_mode = 2
mouse_filter = 2

[node name="OffHandIndicator" type="Label" parent="UseIndicators/HBoxContainer"]
layout_mode = 2
text = "L"

[node name="MainHandIndicator" type="Label" parent="UseIndicators/HBoxContainer"]
layout_mode = 2
text = "R"

[node name="ItemInfo" type="PanelContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("1")

[node name="HBoxContainer" type="HBoxContainer" parent="ItemInfo"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 30

[node name="ItemName" type="Label" parent="ItemInfo/HBoxContainer"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
size_flags_horizontal = 3
clip_text = true

[node name="AmmoCount" type="Label" parent="ItemInfo/HBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
clip_text = true
